Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-13913

[C++] segfault if compute function index called with no options supplied

Details

    Description

       

      If I try to use the index compute function from R without IndexOptions, it results in a segfault.{{}}

      > call_function("index", Array$create(1:10))
      Thread 1 "R" received signal SIGSEGV, Segmentation fault.
      0x00007ffff2291384 in arrow::compute::FunctionOptions::FunctionOptions (
       this=0x7fffffff5970)
       at /home/nic2/arrow_installed_version/include/arrow/compute/function.h:60
      60 class ARROW_EXPORT FunctionOptions : public util::EqualityComparable<FunctionOptions> {
      

      I ran a fresh container to check it wasn't just my machine, and got a similar output with the additional line:

      *** caught segfault ***
      address 0x8, cause 'memory not mapped'

       

      Attachments

        Issue Links

          Activity

            People

              lidavidm David Li
              thisisnic Nicola Crane
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Slack

                    Issue deployment