ARROW-13913: [C++] Don't segfault if IndexOptions omitted

Unlike the other aggregates, there's no default options to fall back on here.

Closes #11097 from lidavidm/arrow-13913

Authored-by: David Li <li.davidm96@gmail.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>